[package]
name = "openssl-ssl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TLS/DTLS/QUIC protocol stack (libssl equivalent) for the OpenSSL Rust workspace"

[dependencies]
openssl-common = { workspace = true }
openssl-crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
